# options-pricing

./: .gitignore  CMakeLists.txt  README.md  bachelier.md  blackscholes.md  main.cpp  theoretical-math-bsm.nb
notebooks_mathematica/: bachelier-blackscholes-comparison.nb  solving_BSM_pde.nb  theoretical-math-bsm.nb
the_Greeks/: README.md
vol/: volsim.py
